--- a/images-compress.html
+++ b/images-compress.html
@@ -28,8 +28,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/image-compressor.png" />
 
   <!-- Hreflang (safe default if you only have English for now) -->
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-crop" />
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-crop" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/images-compress" />
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/images-compress" />
 
   <script type="application/ld+json">
   {
@@ -305,27 +305,27 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 text-left">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">100% Private</h4>
-                          <p>Everything runs locally in your browser nothing is uploaded to servers.</p>
+                          <p class="text-base">Everything runs locally in your browser nothing is uploaded to servers.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Free & Unlimited</h4>
-                          <p>Use it as much as you like. No account, no paywalls, no watermarks.</p>
+                          <p class="text-base">Use it as much as you like. No account, no paywalls, no watermarks.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Target Size or Quality</h4>
-                          <p>Hit exact sizes like 100 KB or 200 KB, or pick a quality level that looks great.</p>
+                          <p class="text-base">Hit exact sizes like 100 KB or 200 KB, or pick a quality level that looks great.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Batch & ZIP</h4>
-                          <p>Compress many images at once and download them all as a ZIP.</p>
+                          <p class="text-base">Compress many images at once and download them all as a ZIP.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">JPG, PNG, WebP Input</h4>
-                          <p>Upload JPG/PNG/WebP. For best compression, results export as JPG.</p>
+                          <p class="text-base">Upload JPG/PNG/WebP. For best compression, results export as JPG.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Works Everywhere</h4>
-                          <p>Optimized for Chrome, Edge, Firefox, and Safari on desktop and mobile.</p>
+                          <p class="text-base">Optimized for Chrome, Edge, Firefox, and Safari on desktop and mobile.</p>
                         </div>
                       </div>
                     </section>
@@ -335,19 +335,19 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Web & Forms</h4>
-                          <p>Meet upload limits (100 KB, 200 KB, 500 KB) for job portals, government sites, and online forms.</p>
+                          <p class="text-base">Meet upload limits (100 KB, 200 KB, 500 KB) for job portals, government sites, and online forms.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Social & Messaging</h4>
-                          <p>Share lighter photos on WhatsApp, Telegram, Instagram, Facebook, X, and more.</p>
+                          <p class="text-base">Share lighter photos on WhatsApp, Telegram, Instagram, Facebook, X, and more.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">E‑commerce & Blogs</h4>
-                          <p>Make product photos and blog images load fast without losing visual quality.</p>
+                          <p class="text-base">Make product photos and blog images load fast without losing visual quality.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Email & Storage</h4>
-                          <p>Shrink attachments and save space in Google Drive, Dropbox, or your device.</p>
+                          <p class="text-base">Shrink attachments and save space in Google Drive, Dropbox, or your device.</p>
                         </div>
                       </div>
                     </section>
@@ -371,7 +371,7 @@
 
                     <section class="mb-10 text-left">
                       <h3 class="text-2xl font-semibold mb-4 text-center">How to compress images online</h3>
-                      <ol class="list-decimal pl-5 space-y-2">
+                      <ol class="list-decimal pl-5 space-y-2 text-lg">
                         <li>Drag & drop images or click “Select Images”.</li>
                         <li>Choose Manual Quality or Target Size (KB/MB).</li>
                         <li>Adjust the quality slider or enter your target file size.</li>
@@ -388,43 +388,29 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Is it private and secure?</h4>
-                          <p>Yes. Everything runs locally in your browser. Your files never leave your device.</p>
+                          <p class="text-base">Yes. Everything runs locally in your browser. Your files never leave your device.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Which formats can I use?</h4>
-                          <p>Upload JPG, PNG, or WebP. For best compression, results export as JPG.</p>
+                          <p class="text-base">Upload JPG, PNG, or WebP. For best compression, results export as JPG.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Can I hit an exact size (e.g., 100 KB)?</h4>
-                          <p>Yes. Use Target Size, enter 100 (KB), and compress. The tool aims to get as close as possible.</p>
+                          <p class="text-base">Yes. Use Target Size, enter 100 (KB), and compress. The tool aims to get as close as possible.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Is it really free forever?</h4>
-                          <p>Yes free and unlimited. No signup, no watermarks, no hidden limits.</p>
+                          <p class="text-base">Yes free and unlimited. No signup, no watermarks, no hidden limits.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">What about transparency and EXIF?</h4>
-                          <p>JPG does not support transparency, so transparent PNG/WebP will have a solid background. EXIF metadata is removed for privacy.</p>
+                          <p class="text-base">JPG does not support transparency, so transparent PNG/WebP will have a solid background. EXIF metadata is removed for privacy.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Do you support batch compression?</h4>
-                          <p>Yes, add multiple images and download all results as a ZIP.</p>
+                          <p class="text-base">Yes, add multiple images and download all results as a ZIP.</p>
                         </div>
                       </div>
-                    </section>
-
-                    <section class="mb-10">
-                      <h3 class="text-2xl font-semibold mb-4">Explore more free image tools</h3>
-                      <p class="text-lg">
-                        Try our other tools: 
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-crop">Image Cropper</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-resize">Image Resize</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/images-compress">Image Compressor</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/images-convert">Image Converter</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-rotate-flip">Image Rotate & Flip</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-to-base64">Image to Base64</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/base64-to-image">Base64 to Image</a>.
-                      </p>
                     </section>
 
                 </div>
@@ -434,14 +420,12 @@
               <div id="sidead-1" aria-label="Sidebar Ad 1"></div>
               <div id="sidead-3" aria-label="Sidebar Ad 3"></div>
               <div id="sidead-5" aria-label="Sidebar Ad 5"></div>
-              <div id="sidead-7" aria-label="Sidebar Ad 7"></div>
             </aside>
 
             <aside class="hidden lg:flex flex-col">
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
-              <div id="sidead-8" aria-label="Sidebar Ad 8"></div>
             </aside>
 
         </div>
