--- a/images-convert.html
+++ b/images-convert.html
@@ -17,7 +17,7 @@
   <meta property="og:description" content="Convert PNG, JPG, or WebP in your browser. Free, unlimited, private. Batch convert with quality control and ZIP download." />
   <meta property="og:url" content="https://www.alltoolai.com/images-convert" />
   <meta property="og:site_name" content="All Tool AI" />
-  <meta property="og:image" content="https://www.alltoolai.com/assets/og/image-converter.png" />
+  <meta property="og:image" content="https://www.alltoolai.com/assets/og/images-convert.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -25,11 +25,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Free Online Image Converter | PNG ↔ JPG ↔ WebP (Private, Fast) All Tool AI" />
   <meta name="twitter:description" content="Convert PNG, JPG, or WebP entirely in your browser. Free and private with batch ZIP download." />
-  <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/image-converter.png" />
+  <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/images-convert.png" />
 
   <!-- Hreflang (safe default if you only have English for now) -->
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-convert" />
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-convert" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/images-convert" />
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/images-convert" />
 
   <script type="application/ld+json">
   {
@@ -293,27 +293,27 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 text-left">
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">100% Private</h4>
-                        <p>All processing happens locally in your browser nothing is uploaded.</p>
+                        <p class="text-base">All processing happens locally in your browser nothing is uploaded.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Free & Unlimited</h4>
-                        <p>Use it as much as you want. No account, no paywalls, no watermarks.</p>
+                        <p class="text-base">Use it as much as you want. No account, no paywalls, no watermarks.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Batch Convert</h4>
-                        <p>Add multiple images, convert in one click, and download as a ZIP.</p>
+                        <p class="text-base">Add multiple images, convert in one click, and download as a ZIP.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Quality Control</h4>
-                        <p>Adjust JPG/WebP quality to balance file size and visual fidelity.</p>
+                        <p class="text-base">Adjust JPG/WebP quality to balance file size and visual fidelity.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Transparency Support</h4>
-                        <p>PNG and WebP preserve transparency; JPG uses a clean white background.</p>
+                        <p class="text-base">PNG and WebP preserve transparency; JPG uses a clean white background.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Works Everywhere</h4>
-                        <p>Optimized for Chrome, Edge, Firefox, and Safari on desktop and mobile.</p>
+                        <p class="text-base">Optimized for Chrome, Edge, Firefox, and Safari on desktop and mobile.</p>
                       </div>
                     </div>
                   </section>
@@ -323,19 +323,19 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left">
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Web & Performance</h4>
-                        <p>Convert to WebP for smaller, faster-loading images on websites and blogs.</p>
+                        <p class="text-base">Convert to WebP for smaller, faster-loading images on websites and blogs.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Social Media</h4>
-                        <p>Quickly switch formats for Instagram, Facebook, X, and LinkedIn posts.</p>
+                        <p class="text-base">Quickly switch formats for Instagram, Facebook, X, and LinkedIn posts.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">E‑commerce</h4>
-                        <p>Standardize product images to consistent formats for storefronts and marketplaces.</p>
+                        <p class="text-base">Standardize product images to consistent formats for storefronts and marketplaces.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Design & Print</h4>
-                        <p>Convert PNG/JPG/WebP as needed for mockups, proofs, and print-ready assets.</p>
+                        <p class="text-base">Convert PNG/JPG/WebP as needed for mockups, proofs, and print-ready assets.</p>
                       </div>
                     </div>
                   </section>
@@ -379,44 +379,30 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Is it private and secure?</h4>
-                        <p>Yes. Everything runs locally in your browser. Your files never leave your device.</p>
+                        <p class="text-base">Yes. Everything runs locally in your browser. Your files never leave your device.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Which formats can I convert?</h4>
-                        <p>Upload JPG, PNG, WebP. Export to PNG, JPG, or WebP. HEIC/HEIF support depends on your browser/OS (best on Safari/iOS).</p>
+                        <p class="text-base">Upload JPG, PNG, WebP. Export to PNG, JPG, or WebP. HEIC/HEIF support depends on your browser/OS (best on Safari/iOS).</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">What about transparency?</h4>
-                        <p>PNG and WebP preserve transparency. JPG doesn’t support it transparent areas become white.</p>
+                        <p class="text-base">PNG and WebP preserve transparency. JPG doesn’t support it transparent areas become white.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Does quality affect size?</h4>
-                        <p>Yes for JPG/WebP lower quality reduces file size. PNG ignores the quality slider.</p>
+                        <p class="text-base">Yes for JPG/WebP lower quality reduces file size. PNG ignores the quality slider.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Do you keep EXIF metadata?</h4>
-                        <p>No, metadata is removed during conversion for privacy and consistency.</p>
+                        <p class="text-base">No, metadata is removed during conversion for privacy and consistency.</p>
                       </div>
                       <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                         <h4 class="text-lg font-semibold mb-2">Any limits?</h4>
-                        <p>Free and unlimited. Practical limits depend on your device memory and browser.</p>
+                        <p class="text-base">Free and unlimited. Practical limits depend on your device memory and browser.</p>
                       </div>
                     </div>
                   </section>
-
-                    <section class="mb-10">
-                      <h3 class="text-2xl font-semibold mb-4">Explore more free image tools</h3>
-                      <p class="text-lg">
-                        Try our other tools: 
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-crop">Image Cropper</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-resize">Image Resize</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/images-compress">Image Compressor</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/images-convert">Image Converter</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-rotate-flip">Image Rotate & Flip</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/image-to-base64">Image to Base64</a>,
-                        <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/base64-to-image">Base64 to Image</a>.
-                      </p>
-                    </section>
 
                 </div>
             </div>
@@ -425,14 +411,12 @@
               <div id="sidead-1" aria-label="Sidebar Ad 1"></div>
               <div id="sidead-3" aria-label="Sidebar Ad 3"></div>
               <div id="sidead-5" aria-label="Sidebar Ad 5"></div>
-              <div id="sidead-7" aria-label="Sidebar Ad 7"></div>
             </aside>
 
             <aside class="hidden lg:flex flex-col">
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
-              <div id="sidead-8" aria-label="Sidebar Ad 8"></div>
             </aside>
 
         </div>
