--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -25,8 +25,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/og/pdf-tools.png">
 
   <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="x-default">
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="en">
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-tools" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-tools" />
 
   <!-- Consolidated JSON-LD -->
   <script type="application/ld+json">
@@ -256,7 +256,7 @@
                       </div>
 
                       <h1 class="text-2xl font-bold mb-4">Text to PDF</h1>
-                      <p class="text-base">Text to PDF: Convert notes or docs into clean, searchable PDFs online free and secure.</p>
+                      <p class="text-lg">Text to PDF: Convert notes or docs into clean, searchable PDFs online free and secure.</p>
                     </a>
                   </div>
 
@@ -288,7 +288,7 @@
                       </div>
 
                       <h1 class="text-2xl font-bold mb-4">Images to PDF</h1>
-                      <p class="text-base">Images to PDF: Combine JPG/PNG images into a single PDF in seconds no signup.</p>
+                      <p class="text-lg">Images to PDF: Combine JPG/PNG images into a single PDF in seconds no signup.</p>
                     </a>
                   </div>
 
@@ -318,7 +318,7 @@
                         </div>                        
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF to JPG</h1>
-                      <p class="text-base">PDF to PNG: Convert PDFs to crisp PNG pages with consistent quality.</p>
+                      <p class="text-lg">PDF to PNG: Convert PDFs to crisp PNG pages with consistent quality.</p>
                     </a>
                   </div>
 
@@ -348,7 +348,7 @@
                         </div>                        
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF to PNG</h1>
-                      <p class="text-base">PDF to PNG: Convert PDFs to crisp PNG pages with consistent quality.</p>
+                      <p class="text-lg">PDF to PNG: Convert PDFs to crisp PNG pages with consistent quality.</p>
                     </a>
                   </div>
 
@@ -371,7 +371,7 @@
                         </div>                        
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Merge PDF</h1>
-                      <p class="text-base">Merge PDF: Combine multiple PDFs into one file keep page order perfect.</p>
+                      <p class="text-lg">Merge PDF: Combine multiple PDFs into one file keep page order perfect.</p>
                     </a>
                   </div>
 
@@ -395,7 +395,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Resize PDF</h1>
-                      <p class="text-base">Resize/Compress PDF: Reduce PDF size while preserving clarity ideal for email or upload limits.
+                      <p class="text-lg">Resize/Compress PDF: Reduce PDF size while preserving clarity ideal for email or upload limits.
                       </p>
                     </a>
                   </div>
@@ -420,7 +420,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Rotate PDF Pages</h1>
-                      <p class="text-base">Rotate PDF Pages: Fix sideways pages and save the corrected PDF instantly.</p>
+                      <p class="text-lg">Rotate PDF Pages: Fix sideways pages and save the corrected PDF instantly.</p>
                     </a>
                   </div>
 
@@ -444,7 +444,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Rearrange PDF Pages</h1>
-                      <p class="text-base">Rearrange PDF Pages: Drag, drop, and reorder pages to organize your document.</p>
+                      <p class="text-lg">Rearrange PDF Pages: Drag, drop, and reorder pages to organize your document.</p>
                     </a>
                   </div>
 
@@ -467,7 +467,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF Extractor</h1>
-                      <p class="text-base">PDF Extractor: Extract selected pages into a new PDF precise and simple.</p>
+                      <p class="text-lg">PDF Extractor: Extract selected pages into a new PDF precise and simple.</p>
                     </a>
                   </div>
 
@@ -492,7 +492,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF Split</h1>
-                      <p class="text-base">PDF Split: Split a PDF by page range or into equal parts easy and fast.</p>
+                      <p class="text-lg">PDF Split: Split a PDF by page range or into equal parts easy and fast.</p>
                     </a>
                   </div>
 
@@ -516,7 +516,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF Pages Delete</h1>
-                      <p class="text-base">PDF Pages Delete: Remove unwanted pages and clean up your document.</p>
+                      <p class="text-lg">PDF Pages Delete: Remove unwanted pages and clean up your document.</p>
                     </a>
                   </div>
 
@@ -539,7 +539,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Add PDF Page Numbers</h1>
-                      <p class="text-base">Add PDF Page Numbers: Add headers/footers with custom page numbers and styles.</p>
+                      <p class="text-lg">Add PDF Page Numbers: Add headers/footers with custom page numbers and styles.</p>
                     </a>
                   </div>
 
@@ -563,7 +563,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">Watermark to PDF</h1>
-                      <p class="text-base">Watermark to PDF: Apply text or image watermarks for branding and sharing.</p>
+                      <p class="text-lg">Watermark to PDF: Apply text or image watermarks for branding and sharing.</p>
                     </a>
                   </div>
 
@@ -587,7 +587,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF Encrypt</h1>
-                      <p class="text-base">PDF Encrypt: Password protect PDFs to control access to your content.</p>
+                      <p class="text-lg">PDF Encrypt: Password protect PDFs to control access to your content.</p>
                     </a>
                   </div>
 
@@ -611,7 +611,7 @@
                         </div>
                       </div>
                       <h1 class="text-2xl font-bold mb-4">PDF Decrypt</h1>
-                      <p class="text-base">PDF Decrypt: Remove a known password from a PDF you own.</p>
+                      <p class="text-lg">PDF Decrypt: Remove a known password from a PDF you own.</p>
                     </a>
                   </div>
 
@@ -626,17 +626,17 @@
 
                 <section class="mx-auto text-slate-800 dark:text-slate-200 max-w-4xl">
                   <h2 class="text-3xl font-bold mb-4 text-center">Free PDF tools for everyone, everywhere</h2>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     Merge PDF, Split PDF, Resize/Compress PDF, Text to PDF, Images to PDF, convert PDF↔JPG/PNG, Rotate & Reorder pages,
                     Extract/Delete pages, Add Page Numbers, Watermark, and Encrypt/Decrypt. Top, fast, best, and lifetime free unlimited.
                     Unlimited use, no signup, and your information is 100% confidential and secure.
                   </p>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     Works worldwide: United States (USA), United Kingdom (UK), Canada, Australia, India, Indonesia, Brazil, Mexico,
                     Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa,
                     Vietnam, Thailand, Malaysia, Singapore and more.
                   </p>
-                  <p class="text-base">
+                  <p class="text-lg">
                     Supported actions & formats: JPG/PNG → PDF, PDF → JPG/PNG, A4/Letter size presets, page range selection, password protected PDFs,
                     high quality output, and privacy first processing. Fast on mobile and desktop; large files are optimized securely.
                   </p>
@@ -649,39 +649,35 @@
                 <section class="text-left max-w-4xl mx-auto">
                   <h3 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h3>
                   <h4 class="text-xl font-medium mt-4 mb-2">Are the PDF tools free and unlimited?</h4>
-                  <p class="text-base mb-4">Yes. Our PDF tools are top, fast, best, and lifetime free unlimited. No signup required. Enjoy unlimited merges, splits, conversions, and edits on desktop and mobile.</p>
+                  <p class="text-lg mb-4">Yes. Our PDF tools are top, fast, best, and lifetime free unlimited. No signup required. Enjoy unlimited merges, splits, conversions, and edits on desktop and mobile.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Is my information private and secure?</h4>
-                  <p class="text-base mb-4">Yes. Your files are processed securely and we do not store your personal file contents. Your information is 100% confidential and secure.</p>
+                  <p class="text-lg mb-4">Yes. Your files are processed securely and we do not store your personal file contents. Your information is 100% confidential and secure.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Which PDF tools are included?</h4>
-                  <p class="text-base mb-4">Merge PDF, Split PDF, Resize/Compress PDF, Text to PDF, Images to PDF, PDF to JPG, PDF to PNG,
+                  <p class="text-lg mb-4">Merge PDF, Split PDF, Resize/Compress PDF, Text to PDF, Images to PDF, PDF to JPG, PDF to PNG,
         Rotate PDF Pages, Rearrange PDF Pages, PDF Extractor (extract pages), PDF Pages Delete, Add PDF Page Numbers,
         Watermark to PDF, PDF Encrypt (password protect), and PDF Decrypt (remove a known password from PDFs you own).</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Do I need to sign up or install anything?</h4>
-                  <p class="text-base mb-4">No. All tools run online in your browser no account, no downloads, and no installation needed.</p>
+                  <p class="text-lg mb-4">No. All tools run online in your browser no account, no downloads, and no installation needed.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Where are these tools available?</h4>
-                  <p class="text-base mb-4">Worldwide. Popular regions include the USA, UK, India, Canada, Australia, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, and Singapore.</p>
+                  <p class="text-lg mb-4">Worldwide. Popular regions include the USA, UK, India, Canada, Australia, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, and Singapore.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Are there file size or page limits?</h4>
-                  <p class="text-base mb-4">Our tools are designed for everyday PDFs. If a very large file runs into browser or network limits, try Resize/Compress PDF first or split the file into parts, then merge after processing.</p>
+                  <p class="text-lg mb-4">Our tools are designed for everyday PDFs. If a very large file runs into browser or network limits, try Resize/Compress PDF first or split the file into parts, then merge after processing.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Can I protect or remove a PDF password?</h4>
-                  <p class="text-base mb-4">Yes. Use PDF Encrypt to add a password. Use PDF Decrypt to remove a known password from a PDF you own and are authorized to modify.</p>
+                  <p class="text-lg mb-4">Yes. Use PDF Encrypt to add a password. Use PDF Decrypt to remove a known password from a PDF you own and are authorized to modify.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Will conversion and compression keep good quality?</h4>
-                  <p class="text-base mb-4">Yes. We balance size and clarity to keep text readable and images sharp. For the smallest files, use Resize/Compress PDF; for highest clarity, choose higher quality options when available.</p>
+                  <p class="text-lg mb-4">Yes. We balance size and clarity to keep text readable and images sharp. For the smallest files, use Resize/Compress PDF; for highest clarity, choose higher quality options when available.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Can I use the tools for work, school, or commercial projects?</h4>
-                  <p class="text-base">Yes. for content you own or are authorized to edit. Our free online PDF tools are suitable for professional, academic, and personal use.</p>
+                  <p class="text-lg">Yes. for content you own or are authorized to edit. Our free online PDF tools are suitable for professional, academic, and personal use.</p>
                 </section>
                 
-              </div>
-
-              <div class="my-4">
-                <div id="midad-3" aria-label="Mid Ad 3"></div>
               </div>
 
             </div>
@@ -708,7 +704,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
