--- a/qr-generator-tools.html
+++ b/qr-generator-tools.html
@@ -30,8 +30,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/qr-tools.jpg" />
 
     <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
-    <link rel="alternate" href="https://www.alltoolai.com/" hreflang="x-default">
-    <link rel="alternate" href="https://www.alltoolai.com/" hreflang="en">
+    <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/qr-generator-tools" />
+    <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/qr-generator-tools" />
 
   <!-- Structured data (QR page) -->
   <script type="application/ld+json">
@@ -190,7 +190,7 @@
     <div class="p-4 sm:p-6 mt-16 mx-auto">
 
       <div class="text-center mt-8 mb-4">
-        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Free QR Code Generator Tools Create & Scan, Unlimited & Secure</h1>
+        <h1 class="p-4 text-4xl md:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent">Free QR Code Generator Tools Create & Scan, Unlimited & Secure</h2>
         <p class="p-2 text-xl max-w-2xl mx-auto text-slate-600 dark:text-slate-400">Top, fast, and best in class QR tools to create Wi‑Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location, Zoom & Skype QR codes. Lifetime free, no signup, 100% confidential and secure.</p>
       </div>
 
@@ -215,8 +215,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Qrcode Scan</h1>
-                      <p class="text-base">Scan QR codes instantly with your camera or image upload. No data stored. Works on mobile and desktop.</p>
+                      <h2 class="text-2xl font-bold mb-4">Qrcode Scan</h2>
+                      <p class="text-lg">Scan QR codes instantly with your camera or image upload. No data stored. Works on mobile and desktop.</p>
                     </a>
                   </div>
 
@@ -241,8 +241,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Wifi QR Code Generator</h1>
-                      <p class="text-base">Create Wi‑Fi QR codes for instant network join. Supports SSID, password, and security types (WPA/WPA2/WEP).</p>
+                      <h2 class="text-2xl font-bold mb-4">Wifi QR Code Generator</h2>
+                      <p class="text-lg">Create Wi‑Fi QR codes for instant network join. Supports SSID, password, and security types (WPA/WPA2/WEP).</p>
                     </a>
                   </div>
 
@@ -267,8 +267,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Text QR Code Generator</h1>
-                      <p class="text-base">Turn any text or note into a scannable QR code. Customize size, colors, and error correction.</p>
+                      <h2 class="text-2xl font-bold mb-4">Text QR Code Generator</h2>
+                      <p class="text-lg">Turn any text or note into a scannable QR code. Customize size, colors, and error correction.</p>
                     </a>
                   </div>
 
@@ -293,8 +293,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Link QR Code Generator</h1>
-                      <p class="text-base">Convert links into QR codes for websites, landing pages, menus, and more. Static, no expiration.</p>
+                      <h2 class="text-2xl font-bold mb-4">Link QR Code Generator</h2>
+                      <p class="text-lg">Convert links into QR codes for websites, landing pages, menus, and more. Static, no expiration.</p>
                     </a>
                   </div>
 
@@ -319,8 +319,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Email QR Code Generator</h1>
-                      <p class="text-base">Pre fill recipient, subject, and body to speed up email outreach with a quick scan.</p>
+                      <h2 class="text-2xl font-bold mb-4">Email QR Code Generator</h2>
+                      <p class="text-lg">Pre fill recipient, subject, and body to speed up email outreach with a quick scan.</p>
                     </a>
                   </div>
 
@@ -344,8 +344,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">PhoneNumber QR Code Generator</h1>
-                      <p class="text-base">Create call ready phone QR codes for print, packaging, and storefronts.</p>
+                      <h2 class="text-2xl font-bold mb-4">PhoneNumber QR Code Generator</h2>
+                      <p class="text-lg">Create call ready phone QR codes for print, packaging, and storefronts.</p>
                     </a>
                   </div>
 
@@ -370,8 +370,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">SMS QR Code Generator</h1>
-                      <p class="text-base">Auto compose text messages on scan great for feedback, support, and quick actions.</p>
+                      <h2 class="text-2xl font-bold mb-4">SMS QR Code Generator</h2>
+                      <p class="text-lg">Auto compose text messages on scan great for feedback, support, and quick actions.</p>
                     </a>
                   </div>
 
@@ -395,8 +395,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">WhatsApp QR Code Generator</h1>
-                      <p class="text-base">Start WhatsApp chats instantly with prefilled message templates.</p>
+                      <h2 class="text-2xl font-bold mb-4">WhatsApp QR Code Generator</h2>
+                      <p class="text-lg">Start WhatsApp chats instantly with prefilled message templates.</p>
                     </a>
                   </div>
 
@@ -420,8 +420,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Zoom QR Code Generator</h1>
-                      <p class="text-base">Share Zoom meeting links via QR for quick, error free joining.</p>
+                      <h2 class="text-2xl font-bold mb-4">Zoom QR Code Generator</h2>
+                      <p class="text-lg">Share Zoom meeting links via QR for quick, error free joining.</p>
                     </a>
                   </div>
 
@@ -445,8 +445,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Skype QR Code Generator</h1>
-                      <p class="text-base">Create QR codes for Skype usernames, calls, and chats.</p>
+                      <h2 class="text-2xl font-bold mb-4">Skype QR Code Generator</h2>
+                      <p class="text-lg">Create QR codes for Skype usernames, calls, and chats.</p>
                     </a>
                   </div>
 
@@ -469,8 +469,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Vcard QR Code Generator</h1>
-                      <p class="text-base">Share full contact info (name, phone, email, company, address) in one scan.</p>
+                      <h2 class="text-2xl font-bold mb-4">Vcard QR Code Generator</h2>
+                      <p class="text-lg">Share full contact info (name, phone, email, company, address) in one scan.</p>
                     </a>
                   </div>
 
@@ -494,8 +494,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Event QR Code Generator</h1>
-                      <p class="text-base">Add events with title, location, date/time to calendars via QR.</p>
+                      <h2 class="text-2xl font-bold mb-4">Event QR Code Generator</h2>
+                      <p class="text-lg">Add events with title, location, date/time to calendars via QR.</p>
                     </a>
                   </div>
 
@@ -520,8 +520,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">BitCoin QR Code Generator</h1>
-                      <p class="text-base">Generate BTC payment QR codes with address and amount fields.</p>
+                      <h2 class="text-2xl font-bold mb-4">BitCoin QR Code Generator</h2>
+                      <p class="text-lg">Generate BTC payment QR codes with address and amount fields.</p>
                     </a>
                   </div>
 
@@ -545,8 +545,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Location QR Code Generator</h1>
-                      <p class="text-base">Share map locations and navigation links with one scan.</p>
+                      <h2 class="text-2xl font-bold mb-4">Location QR Code Generator</h2>
+                      <p class="text-lg">Share map locations and navigation links with one scan.</p>
                     </a>
                   </div>
 
@@ -561,10 +561,10 @@
 
                 <section class="mx-auto text-slate-800 dark:text-slate-200 max-w-4xl">
                   <h2 class="text-3xl font-bold mb-4">Works everywhere you do</h2>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     All Tool AI QR generators and scanner are optimized for users worldwide and across major browsers. Whether you’re on mobile or desktop, enjoy fast performance and privacy first tools with no signup.
                   </p>
-                  <p class="text-base">
+                  <p class="text-lg">
                     Popular regions: United States (USA), United Kingdom (UK), India, Canada, Australia, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, and Singapore.
                   </p>
                 </section>
@@ -576,25 +576,21 @@
                 <section class="text-left max-w-4xl mx-auto">
                   <h3 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h3>
                   <h4 class="text-xl font-medium mt-4 mb-2">Are these QR tools free and unlimited?</h4>
-                  <p class="text-base mb-4">Yes. 100% free, no signup, and lifetime unlimited use.</p>
+                  <p class="text-lg mb-4">Yes. 100% free, no signup, and lifetime unlimited use.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Is my data private and secure?</h4>
-                  <p class="text-base mb-4">Yes. We do not store your personal QR data or scan results. Your information is confidential and processed securely.</p>
+                  <p class="text-lg mb-4">Yes. We do not store your personal QR data or scan results. Your information is confidential and processed securely.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Which QR types can I create?</h4>
-                  <p class="text-base mb-4">Wi‑Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location (maps), Zoom, and Skype.</p>
+                  <p class="text-lg mb-4">Wi‑Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location (maps), Zoom, and Skype.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Do QR codes expire?</h4>
-                  <p class="text-base mb-4">Static QR codes created here do not expire download and reuse anytime.</p>
+                  <p class="text-lg mb-4">Static QR codes created here do not expire download and reuse anytime.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Do these tools work on mobile?</h4>
-                  <p class="text-base">Absolutely. All tools work smoothly on phones, tablets, and desktops.</p>
+                  <p class="text-lg">Absolutely. All tools work smoothly on phones, tablets, and desktops.</p>
                 </section>
                 
-              </div>
-
-              <div class="my-4">
-                <div id="midad-3" aria-label="Mid Ad 3"></div>
               </div>
 
             </div>
@@ -621,7 +617,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
